# Kurioto

./: .gitignore  LICENSE  README.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: project-plan.md  requirements.md
examples/: __init__.py  demo.py
src/kurioto/: __init__.py  agent.py  app.py  cli.py  config.py  logging.py  memory.py  safety.py  safety_legacy.py
src/kurioto/agents/: base.py  educator.py  orchestrator.py  orchestrator_agent.py  safety_agent.py
src/kurioto/api/: deps.py  education.py
src/kurioto/education/: __init__.py  material_manager.py  parent_dashboard.py
src/kurioto/safety/: __init__.py  base.py  evaluator.py  multi_layer.py  review_queue.py
src/kurioto/safety/classifiers/: __init__.py  gemini_classifier.py  perspective_classifier.py  regex_classifier.py
src/kurioto/tools/: __init__.py  base.py  image_safety.py  music.py  parent_dashboard.py  search.py
tests/: __init__.py  conftest.py  test_agent.py  test_api_dashboard.py  test_api_uploads.py  test_educator.py  test_material_manager.py  test_orchestrator.py  test_orchestrator_educational.py  test_orchestrator_integration.py  test_parent_alert_flow.py  test_parent_alert_redirect.py  test_parent_alert_warn.py  test_parent_dashboard.py  test_safety.py  test_safety_agent.py  test_tools.py
