[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kurioto"
version = "0.1.0"
description = "A Safe AI Companion for Curious Minds - Cloud Agent for child-safe educational interactions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Lapicero"}
]
keywords = ["ai", "agents", "education", "children", "safety", "gemini", "adk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-adk~=1.19.0",
    "google-genai==1.52.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "aiohttp==3.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.6",
    "mypy==1.18.2",
]

[project.scripts]
kurioto = "kurioto.cli:main"

[project.urls]
Homepage = "https://kurioto.com"
Repository = "https://github.com/Lapicero/Kurioto"
Documentation = "https://github.com/Lapicero/Kurioto#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
